# aiodiscourse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  bench.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  publish.yml
aiodiscourse/: __init__.py  cli.py  client.py  exceptions.py  retry.py
aiodiscourse/namespaces/: admin.py  categories.py  groups.py  notifications.py  posts.py  search.py  tags.py  topics.py  uploads.py  users.py
docker/: Dockerfile  docker-compose.yml
docs/: API_REFERENCE.md  conf.py  index.rst
examples/: batch_create_topics.py  common.py  create_user.py  get_post.py  get_topic.py  list_topics.py  reply_post.py  reply_topic.py
tests/: conftest.py  test_admin.py  test_admin_admin.py  test_admin_undocumented.py  test_categories.py  test_categories_admin.py  test_categories_undocumented.py  test_groups.py  test_groups_admin.py  test_groups_undocumented.py  test_integration.py  test_notifications.py  test_notifications_admin.py  test_notifications_undocumented.py  test_posts.py  test_posts_admin.py  test_posts_undocumented.py  test_search.py  test_search_admin.py  test_search_undocumented.py  test_tags.py  test_tags_admin.py  test_tags_undocumented.py  test_topics.py  test_topics_admin.py  test_topics_undocumented.py  test_uploads.py  test_uploads_admin.py  test_uploads_undocumented.py  test_users.py  test_users_admin.py  test_users_undocumented.py
