[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aiodiscourse"
version = "0.3.0"
description = "Async client for Discourse API"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Andrew Sawyers", email = "andrew@sawdog.com" }]
dependencies =["aiohttp", "arrow"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
cli = [
    "click",
    "dotenv",
]

[project.scripts]
discourse = "aiodiscourse.cli:cli"

[tool.setuptools.packages.find]
include = ["aiodiscourse*"]
